martin/sass-components

--- a/client/src/styles/base/_settings.scss
+++ b/client/src/styles/base/_settings.scss
@@ -1,5 +1,8 @@
 // podemos declarar propiedades para reutilizarlas en todos los estilos.  
-$main: #2a12df;
+$main: #746da5;
+
+
+
 
 body {
     margin: 0;
