--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -2,6 +2,9 @@
 
 
 //importo estilos base index
-@import './base/settings'
+@import './base/settings';
 
-
+//components (esta bien que no aparezca el _)
+@import './Components/Home';
+@import './Components/NavBar';
+@import './Components/Footer';
