--- a/client/src/styles/base/_bootStrap.scss
+++ b/client/src/styles/base/_bootStrap.scss
@@ -1,1 +1,5 @@
+@import "../Components/Footer";
+@import "../Components/Home";
+@import "../Components/NavBar";
+
 @import "../../../node_modules/bootstrap/scss/bootstrap.scss";
