juani/front navbar con estilos, card product desarrollada

--- a/client/src/styles/Components/_NavBar.scss
+++ b/client/src/styles/Components/_NavBar.scss
@@ -1,3 +1,6 @@
-.NavBar_btns{
-    background-color: black;
+.navbar-btns-container {
+  display: flex-start;
+  justify-content: space-around;
+  background-color: rgb(149, 60, 60);
+  padding: 10 30px;
 }
