--- a/client/src/styles/base/_customVariables.scss
+++ b/client/src/styles/base/_customVariables.scss
@@ -20,4 +20,23 @@ $position-values: (
     90: 90%,
     95: 95%,
     100: 100%,
+    105: 105%,
+    110: 110%,
+    150: 150%,
+    200: 250%,
 );
+
+.listImg {
+    width: 80px;
+    aspect-ratio: auto 80 / 80;
+    height: 80px;
+    margin-left: 15px;
+}
+
+.listButton {
+    margin: 5px;
+}
+
+.listIcon {
+    margin: 15px;
+}
