--- a/client/src/styles/base/_bootStrap.scss
+++ b/client/src/styles/base/_bootStrap.scss
@@ -2,5 +2,6 @@
 @import "../Components/Home";
 @import "../Components/NavBar";
 @import "./customVariables";
-
+@import "../Components/Filtros";
+@import "../Components/Carrusel";
 @import "../../../node_modules/bootstrap/scss/bootstrap.scss";
